# ai-first-crm-hcp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/database/: __init__.py  base.py  database.py
backend/app/tools/: __init__.py
backend/app/utils/: __init__.py
backend/tests/: __init__.py
src/: App.tsx  index.css
src/api/: agent.ts  auth.ts  axios.ts  hcps.ts  interactions.ts
src/components/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  ChatBubble.tsx  DatePicker.tsx  DoctorCard.tsx  Dropdown.tsx  Input.tsx  InteractionDetailModal.tsx  Modal.tsx  Navbar.tsx  SearchInput.tsx  Sidebar.tsx  StatCard.tsx  Textarea.tsx  TimelineItem.tsx
src/layouts/: DashboardLayout.tsx
src/pages/: Calendar.tsx  Dashboard.tsx  HcpDetails.tsx  HcpList.tsx  InteractionHistory.tsx  LogInteraction.tsx  Login.tsx  Reports.tsx  Settings.tsx  Tasks.tsx
src/redux/: store.ts
src/redux/slices/: authSlice.ts  chatSlice.ts  hcpSlice.ts  interactionSlice.ts  uiSlice.ts
src/types/: index.ts
src/utils/: mockData.ts
